# cpp-practice-4-sem

./: README.md
JsonWriter/: json_writer.cpp  sensor_alpha_data.json  sensor_beta_data.json  sensor_gamma_data.json  system_core_data.json
task_1/: task_1.cpp
task_2/: task_2.cpp
task_3/PC/: CMakeLists.txt  Logger.h  PointCloud.h  filter.hpp  main.cpp
task_3/PC/blockage_diag/: blockage_diag.cpp  blockage_diag.hpp
task_3/PC/crop_box_filter/: crop_box_filter.cpp  crop_box_filter.hpp
task_4/: task_4.cpp
task_5/: task_5.cpp
task_6/: task_6.cpp
task_7/: task_7.cpp
task_8/: task_8.cpp
